# cse291a-fa25-rag

./: .gitignore  EVALUATION_RESULTS_SUMMARY.md  README.md  RERANKING_IMPLEMENTATION.md  evaluation_results.csv  pyproject.toml  test_reranking.py
data/: palantir_urls.txt
data/embeddings/ DoorDash/: 0683f6d9b9d1_embeds.parquet  317ede937e6f_meta.json  43867851a03f_embeds.parquet  43867851a03f_hnsw.faiss  43867851a03f_meta.json  497a248225ec_embeds.parquet  497a248225ec_meta.json  4ad51ac50c4e_embeds.parquet  5451d4c792c3_embeds.parquet  5451d4c792c3_hnsw.faiss  5451d4c792c3_meta.json  564eea146116_hnsw.faiss  564eea146116_meta.json  6bcc11a159e3_hnsw.faiss  6bcc11a159e3_meta.json  791a02907d2e_hnsw.faiss  791a02907d2e_meta.json  7df3d4f7ac4a_meta.json  97d36e89086e_meta.json  9f0a90539643_embeds.parquet  9f0a90539643_meta.json  a531d0753b70_meta.json  bfd946899f9a_hnsw.faiss  e49878b35d8a_embeds.parquet  e49878b35d8a_meta.json  ea57405ae03b_embeds.parquet  ea57405ae03b_hnsw.faiss  ea57405ae03b_meta.json  f29e5bed6736_hnsw.faiss  fb50bcbb1d6f_embeds.parquet  fb50bcbb1d6f_hnsw.faiss
data/embeddings/alphabet/: alphabet-0001_embeds.parquet  alphabet-0001_hnsw.faiss  alphabet-0001_meta.json  alphabet-0002_embeds.parquet  alphabet-0002_hnsw.faiss  alphabet-0002_meta.json  (+54 more)
data_LLM_based_chunking/: qualcomm_urls.txt
scripts/: compare_baseline_vs_improved.py  generate_embeddings.py  get_metrics.py  inspect_results.py  query_faiss.py  query_faiss_improved.py  run_evaluation.py  visualize_embeddings.py
scripts_part_2/: LLM_chunker.py  LLM_embeddings.py  usage.md
(+461 files in other folders)
